--- a/dev/scss/partials/_menu.scss
+++ b/dev/scss/partials/_menu.scss
@@ -50,7 +50,7 @@
   width: 235px;
   z-index: 100;
   @media #{$large} {
-    right: 5%;
+    right: 2%;
   }
   @media #{$x-large} {
     right: 10%;
